# find-dup-defs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml
crates/dup-defs-core/: Cargo.toml
crates/dup-defs-core/src/: lib.rs  loc.rs  types.rs
crates/find-dup-defs/: Cargo.toml  README.md
crates/find-dup-defs/src/: lib.rs  main.rs  snapshot.rs  type3.rs
crates/find-dup-defs/tests/: golden_cli.rs
crates/find-dup-defs/tests/fixtures/mixed/py/: core_a.py  core_b.py
crates/find-dup-defs/tests/fixtures/mixed/ts/: core_a.ts  core_b.ts  widget_a.tsx
crates/find-dup-defs/tests/golden/: calibrate.txt  report.json  report.py.txt  report.ts.txt  report.txt
crates/py-canon/: Cargo.toml  README.md
crates/py-canon/examples/: verify_golden.rs
crates/py-canon/src/: canon.rs  defs.rs  frontend.rs  lib.rs  loc.rs
crates/rs-canon/: Cargo.toml
crates/rs-canon/examples/: parse_coverage.rs
crates/rs-canon/src/: canon.rs  defs.rs  frontend.rs  lib.rs
crates/ts-canon/: Cargo.toml
crates/ts-canon/examples/: canon_one.rs
crates/ts-canon/src/: canon.rs  defs.rs  frontend.rs  lib.rs
