[package]
name = "dup-defs-core"
version = "0.1.1"
description = "The find-dup-defs frontend↔engine contract — Def / KindSpec / Analysis / the Frontend trait (+ LineMap). Frontend-agnostic; both py-canon and ts-canon depend on it."
keywords = ["ast", "canonicalize", "parsing", "clone", "duplicate"]
categories = ["development-tools"]
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "dup_defs_core"

[lints]
workspace = true
